--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <title>Heya</title>
 </head>
   <body>
-    Kira : Thunder Bay
+    <p> Kira : Thunder Bay </p>
     Hello World. I am alive
   </body>
 </html>
